# projx-py3-full

./: .gitignore  LICENSE  README.rst  TODO.org  pyproject.toml  setup.py
src/__t_module_name__/: __init__.py  cli.py  submodule0.py
